// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`normalizer accepts a \`block\` type within inline objects 1`] = `
Object {
  "documents": Array [],
  "registeredTypes": Array [
    Object {
      "codegen": Object {
        "required": false,
      },
      "description": null,
      "hasValidation": false,
      "hidden": false,
      "list": null,
      "name": "wysiwyg",
      "of": Array [
        Object {
          "codegen": Object {
            "required": false,
          },
          "description": null,
          "hasValidation": false,
          "hidden": false,
          "markDefs": Array [],
          "name": null,
          "of": Array [
            Object {
              "codegen": Object {
                "required": false,
              },
              "description": null,
              "fields": Array [
                Object {
                  "codegen": Object {
                    "required": false,
                  },
                  "definition": Object {
                    "codegen": Object {
                      "required": false,
                    },
                    "description": null,
                    "hasValidation": false,
                    "hidden": false,
                    "list": null,
                    "name": "name",
                    "readOnly": false,
                    "title": "Name",
                    "type": "String",
                  },
                  "description": "",
                  "hasValidation": false,
                  "hidden": false,
                  "name": "name",
                  "readOnly": false,
                  "title": "Name",
                },
              ],
              "hasValidation": false,
              "hidden": false,
              "name": "inlineObject",
              "readOnly": false,
              "title": "Inline Object",
              "type": "Object",
            },
          ],
          "readOnly": false,
          "title": null,
          "type": "Block",
        },
      ],
      "readOnly": false,
      "title": "Wysiwyg",
      "type": "Array",
    },
    Object {
      "codegen": Object {
        "required": false,
      },
      "description": null,
      "hasValidation": false,
      "hidden": false,
      "list": null,
      "name": "wysiwyg",
      "of": Array [
        Object {
          "codegen": Object {
            "required": false,
          },
          "description": null,
          "hasValidation": false,
          "hidden": false,
          "markDefs": Array [],
          "name": null,
          "of": Array [
            Object {
              "codegen": Object {
                "required": false,
              },
              "description": null,
              "fields": Array [
                Object {
                  "codegen": Object {
                    "required": false,
                  },
                  "definition": Object {
                    "codegen": Object {
                      "required": false,
                    },
                    "description": null,
                    "hasValidation": false,
                    "hidden": false,
                    "list": null,
                    "name": "name",
                    "readOnly": false,
                    "title": "Name",
                    "type": "String",
                  },
                  "description": "",
                  "hasValidation": false,
                  "hidden": false,
                  "name": "name",
                  "readOnly": false,
                  "title": "Name",
                },
              ],
              "hasValidation": false,
              "hidden": false,
              "name": "inlineObject",
              "readOnly": false,
              "title": "Inline Object",
              "type": "Object",
            },
          ],
          "readOnly": false,
          "title": null,
          "type": "Block",
        },
      ],
      "readOnly": false,
      "title": "Wysiwyg",
      "type": "Array",
    },
    Object {
      "codegen": Object {
        "required": false,
      },
      "description": null,
      "hasValidation": false,
      "hidden": false,
      "list": null,
      "name": "wysiwyg",
      "of": Array [
        Object {
          "codegen": Object {
            "required": false,
          },
          "description": null,
          "hasValidation": false,
          "hidden": false,
          "markDefs": Array [],
          "name": null,
          "of": null,
          "readOnly": false,
          "title": null,
          "type": "Block",
        },
      ],
      "readOnly": false,
      "title": "Wysiwyg",
      "type": "Array",
    },
  ],
  "type": "SchemaRoot",
}
`;

exports[`normalizer accepts a block type with nested of types 1`] = `
Object {
  "documents": Array [],
  "registeredTypes": Array [
    Object {
      "codegen": Object {
        "required": false,
      },
      "description": null,
      "hasValidation": false,
      "hidden": false,
      "list": null,
      "name": "arrayTesting",
      "of": Array [
        Object {
          "codegen": Object {
            "required": false,
          },
          "description": null,
          "hasValidation": false,
          "hidden": false,
          "markDefs": Array [],
          "name": null,
          "of": Array [
            Object {
              "codegen": Object {
                "required": false,
              },
              "description": null,
              "hasValidation": false,
              "hidden": false,
              "list": null,
              "name": null,
              "readOnly": false,
              "title": null,
              "type": "String",
            },
          ],
          "readOnly": false,
          "title": null,
          "type": "Block",
        },
      ],
      "readOnly": false,
      "title": "Array Testing",
      "type": "Array",
    },
  ],
  "type": "SchemaRoot",
}
`;

exports[`normalizer accepts a number or string with or without list options 1`] = `
Object {
  "documents": Array [],
  "registeredTypes": Array [
    Object {
      "codegen": Object {
        "required": false,
      },
      "description": null,
      "hasValidation": false,
      "hidden": false,
      "list": Array [
        Object {
          "title": "A",
          "value": "a",
        },
        Object {
          "title": "B",
          "value": "b",
        },
        Object {
          "title": "C",
          "value": "c",
        },
      ],
      "name": "dropdown",
      "readOnly": false,
      "title": "Dropdown",
      "type": "String",
    },
    Object {
      "codegen": Object {
        "required": false,
      },
      "description": null,
      "hasValidation": false,
      "hidden": false,
      "list": Array [
        Object {
          "title": "E",
          "value": "e",
        },
        Object {
          "title": "F",
          "value": "f",
        },
        Object {
          "title": "G",
          "value": "g",
        },
      ],
      "name": "dropdownNoTitle",
      "readOnly": false,
      "title": "Dropdown No Title",
      "type": "String",
    },
    Object {
      "codegen": Object {
        "required": false,
      },
      "description": null,
      "hasValidation": false,
      "hidden": false,
      "list": Array [
        Object {
          "title": "1",
          "value": 1,
        },
        Object {
          "title": "2",
          "value": 2,
        },
        Object {
          "title": "3",
          "value": 3,
        },
      ],
      "name": "numberDropdown",
      "readOnly": false,
      "title": "Number Dropdown",
      "type": "Number",
    },
    Object {
      "codegen": Object {
        "required": false,
      },
      "description": null,
      "fields": Array [
        Object {
          "codegen": Object {
            "required": false,
          },
          "definition": Object {
            "codegen": Object {
              "required": false,
            },
            "description": null,
            "hasValidation": false,
            "hidden": false,
            "name": "dropdownField",
            "readOnly": false,
            "title": "Dropdown Field",
            "to": "dropdown",
            "type": "RegistryReference",
          },
          "description": "",
          "hasValidation": false,
          "hidden": false,
          "name": "dropdownField",
          "readOnly": false,
          "title": "Dropdown Field",
        },
        Object {
          "codegen": Object {
            "required": false,
          },
          "definition": Object {
            "codegen": Object {
              "required": false,
            },
            "description": null,
            "hasValidation": false,
            "hidden": false,
            "name": "numberDropdownField",
            "readOnly": false,
            "title": "Number Dropdown Field",
            "to": "numberDropdown",
            "type": "RegistryReference",
          },
          "description": "",
          "hasValidation": false,
          "hidden": false,
          "name": "numberDropdownField",
          "readOnly": false,
          "title": "Number Dropdown Field",
        },
        Object {
          "codegen": Object {
            "required": false,
          },
          "definition": Object {
            "codegen": Object {
              "required": false,
            },
            "description": null,
            "hasValidation": false,
            "hidden": false,
            "list": null,
            "name": "foo",
            "readOnly": false,
            "title": "Foo",
            "type": "String",
          },
          "description": "",
          "hasValidation": false,
          "hidden": false,
          "name": "foo",
          "readOnly": false,
          "title": "Foo",
        },
        Object {
          "codegen": Object {
            "required": false,
          },
          "definition": Object {
            "codegen": Object {
              "required": false,
            },
            "description": null,
            "hasValidation": false,
            "hidden": false,
            "list": null,
            "name": "bar",
            "readOnly": false,
            "title": "Bar",
            "type": "Number",
          },
          "description": "",
          "hasValidation": false,
          "hidden": false,
          "name": "bar",
          "readOnly": false,
          "title": "Bar",
        },
      ],
      "hasValidation": false,
      "hidden": false,
      "name": "someObject",
      "readOnly": false,
      "title": "Some Object",
      "type": "Object",
    },
  ],
  "type": "SchemaRoot",
}
`;

exports[`normalizer accepts a reference type 1`] = `
Object {
  "documents": Array [
    Object {
      "codegen": Object {
        "required": false,
      },
      "description": null,
      "fields": Array [
        Object {
          "codegen": Object {
            "required": false,
          },
          "definition": Object {
            "codegen": Object {
              "required": false,
            },
            "description": null,
            "hasValidation": false,
            "hidden": false,
            "list": null,
            "name": "title",
            "readOnly": false,
            "title": "Title",
            "type": "String",
          },
          "description": "",
          "hasValidation": false,
          "hidden": false,
          "name": "title",
          "readOnly": false,
          "title": "Title",
        },
        Object {
          "codegen": Object {
            "required": false,
          },
          "definition": Object {
            "codegen": Object {
              "required": false,
            },
            "description": null,
            "hasValidation": false,
            "hidden": false,
            "name": "actor",
            "readOnly": false,
            "title": "Actor",
            "to": Array [
              Object {
                "codegen": Object {
                  "required": false,
                },
                "description": null,
                "hasValidation": false,
                "hidden": false,
                "name": null,
                "readOnly": false,
                "title": null,
                "to": "actor",
                "type": "RegistryReference",
              },
            ],
            "type": "Reference",
            "weak": false,
          },
          "description": "",
          "hasValidation": false,
          "hidden": false,
          "name": "actor",
          "readOnly": false,
          "title": "Actor",
        },
      ],
      "hasValidation": false,
      "hidden": false,
      "name": "movie",
      "readOnly": false,
      "title": "Movie",
      "type": "Document",
    },
    Object {
      "codegen": Object {
        "required": false,
      },
      "description": null,
      "fields": Array [
        Object {
          "codegen": Object {
            "required": false,
          },
          "definition": Object {
            "codegen": Object {
              "required": false,
            },
            "description": null,
            "hasValidation": false,
            "hidden": false,
            "list": null,
            "name": "name",
            "readOnly": false,
            "title": "Name",
            "type": "String",
          },
          "description": "",
          "hasValidation": false,
          "hidden": false,
          "name": "name",
          "readOnly": false,
          "title": "Name",
        },
      ],
      "hasValidation": false,
      "hidden": false,
      "name": "actor",
      "readOnly": false,
      "title": "Actor",
      "type": "Document",
    },
  ],
  "registeredTypes": Array [],
  "type": "SchemaRoot",
}
`;

exports[`normalizer accepts an image and file type with or without fields 1`] = `
Object {
  "documents": Array [],
  "registeredTypes": Array [
    Object {
      "codegen": Object {
        "required": false,
      },
      "description": null,
      "fields": null,
      "hasValidation": false,
      "hidden": false,
      "name": "myImage",
      "readOnly": false,
      "title": "My Image",
      "type": "Image",
    },
    Object {
      "codegen": Object {
        "required": false,
      },
      "description": null,
      "fields": Array [
        Object {
          "codegen": Object {
            "required": false,
          },
          "definition": Object {
            "codegen": Object {
              "required": false,
            },
            "description": null,
            "hasValidation": false,
            "hidden": false,
            "list": null,
            "name": "description",
            "readOnly": false,
            "title": "Description",
            "type": "String",
          },
          "description": "",
          "hasValidation": false,
          "hidden": false,
          "name": "description",
          "readOnly": false,
          "title": "Description",
        },
      ],
      "hasValidation": false,
      "hidden": false,
      "name": "myFile",
      "readOnly": false,
      "title": "My File",
      "type": "File",
    },
  ],
  "type": "SchemaRoot",
}
`;

exports[`normalizer accepts and normalizes a field with a nested object 1`] = `
Object {
  "documents": Array [],
  "registeredTypes": Array [
    Object {
      "codegen": Object {
        "required": false,
      },
      "description": null,
      "fields": Array [
        Object {
          "codegen": Object {
            "required": false,
          },
          "definition": Object {
            "codegen": Object {
              "required": false,
            },
            "description": null,
            "fields": Array [
              Object {
                "codegen": Object {
                  "required": false,
                },
                "definition": Object {
                  "codegen": Object {
                    "required": false,
                  },
                  "description": null,
                  "hasValidation": false,
                  "hidden": false,
                  "list": null,
                  "name": "name",
                  "readOnly": false,
                  "title": "Name",
                  "type": "String",
                },
                "description": "",
                "hasValidation": false,
                "hidden": false,
                "name": "name",
                "readOnly": false,
                "title": "Name",
              },
            ],
            "hasValidation": false,
            "hidden": false,
            "name": "actor",
            "readOnly": false,
            "title": "Actor",
            "type": "Object",
          },
          "description": "",
          "hasValidation": false,
          "hidden": false,
          "name": "actor",
          "readOnly": false,
          "title": "Actor",
        },
      ],
      "hasValidation": false,
      "hidden": false,
      "name": "movie",
      "readOnly": false,
      "title": "Movie",
      "type": "Object",
    },
  ],
  "type": "SchemaRoot",
}
`;

exports[`normalizer accepts and normalizes a field with a top-level reference 1`] = `
Object {
  "documents": Array [],
  "registeredTypes": Array [
    Object {
      "codegen": Object {
        "required": false,
      },
      "description": null,
      "fields": Array [
        Object {
          "codegen": Object {
            "required": false,
          },
          "definition": Object {
            "codegen": Object {
              "required": false,
            },
            "description": null,
            "hasValidation": false,
            "hidden": false,
            "list": null,
            "name": "name",
            "readOnly": false,
            "title": "Name",
            "type": "String",
          },
          "description": "",
          "hasValidation": false,
          "hidden": false,
          "name": "name",
          "readOnly": false,
          "title": "Name",
        },
      ],
      "hasValidation": false,
      "hidden": false,
      "name": "actor",
      "readOnly": false,
      "title": "Actor",
      "type": "Object",
    },
    Object {
      "codegen": Object {
        "required": false,
      },
      "description": null,
      "fields": Array [
        Object {
          "codegen": Object {
            "required": false,
          },
          "definition": Object {
            "codegen": Object {
              "required": false,
            },
            "description": null,
            "hasValidation": false,
            "hidden": false,
            "name": "actor",
            "readOnly": false,
            "title": "Actor",
            "to": "actor",
            "type": "RegistryReference",
          },
          "description": "",
          "hasValidation": false,
          "hidden": false,
          "name": "actor",
          "readOnly": false,
          "title": "Actor",
        },
      ],
      "hasValidation": false,
      "hidden": false,
      "name": "movie",
      "readOnly": false,
      "title": "Movie",
      "type": "Object",
    },
  ],
  "type": "SchemaRoot",
}
`;

exports[`normalizer accepts and normalizes array types 1`] = `
Object {
  "documents": Array [],
  "registeredTypes": Array [
    Object {
      "codegen": Object {
        "required": false,
      },
      "description": null,
      "hasValidation": false,
      "hidden": false,
      "list": null,
      "name": "myArray",
      "of": Array [
        Object {
          "codegen": Object {
            "required": false,
          },
          "description": null,
          "hasValidation": false,
          "hidden": false,
          "list": null,
          "name": null,
          "readOnly": false,
          "title": null,
          "type": "String",
        },
      ],
      "readOnly": false,
      "title": "My Array",
      "type": "Array",
    },
    Object {
      "codegen": Object {
        "required": false,
      },
      "description": null,
      "hasValidation": false,
      "hidden": false,
      "list": null,
      "name": "inlineObjects",
      "of": Array [
        Object {
          "codegen": Object {
            "required": false,
          },
          "description": null,
          "fields": Array [
            Object {
              "codegen": Object {
                "required": false,
              },
              "definition": Object {
                "codegen": Object {
                  "required": false,
                },
                "description": null,
                "hasValidation": false,
                "hidden": false,
                "list": null,
                "name": "foo",
                "readOnly": false,
                "title": "Foo",
                "type": "String",
              },
              "description": "",
              "hasValidation": false,
              "hidden": false,
              "name": "foo",
              "readOnly": false,
              "title": "Foo",
            },
          ],
          "hasValidation": false,
          "hidden": false,
          "name": null,
          "readOnly": false,
          "title": null,
          "type": "Object",
        },
      ],
      "readOnly": false,
      "title": "Inline Objects",
      "type": "Array",
    },
    Object {
      "codegen": Object {
        "required": false,
      },
      "description": null,
      "hasValidation": false,
      "hidden": false,
      "list": null,
      "name": "topLevelType",
      "of": Array [
        Object {
          "codegen": Object {
            "required": false,
          },
          "description": null,
          "hasValidation": false,
          "hidden": false,
          "name": null,
          "readOnly": false,
          "title": null,
          "to": "actor",
          "type": "RegistryReference",
        },
      ],
      "readOnly": false,
      "title": "Top Level Type",
      "type": "Array",
    },
    Object {
      "codegen": Object {
        "required": false,
      },
      "description": null,
      "fields": Array [
        Object {
          "codegen": Object {
            "required": false,
          },
          "definition": Object {
            "codegen": Object {
              "required": false,
            },
            "description": null,
            "hasValidation": false,
            "hidden": false,
            "list": null,
            "name": "name",
            "readOnly": false,
            "title": "Name",
            "type": "String",
          },
          "description": "",
          "hasValidation": false,
          "hidden": false,
          "name": "name",
          "readOnly": false,
          "title": "Name",
        },
      ],
      "hasValidation": false,
      "hidden": false,
      "name": "actor",
      "readOnly": false,
      "title": "Actor",
      "type": "Object",
    },
  ],
  "type": "SchemaRoot",
}
`;

exports[`normalizer accepts basic primitives types 1`] = `
Object {
  "documents": Array [],
  "registeredTypes": Array [
    Object {
      "codegen": Object {
        "required": false,
      },
      "description": null,
      "hasValidation": false,
      "hidden": false,
      "name": "boolean",
      "readOnly": false,
      "title": "Boolean",
      "type": "Boolean",
    },
    Object {
      "codegen": Object {
        "required": false,
      },
      "description": null,
      "fields": Array [
        Object {
          "codegen": Object {
            "required": false,
          },
          "definition": Object {
            "codegen": Object {
              "required": false,
            },
            "description": null,
            "hasValidation": false,
            "hidden": false,
            "name": "date",
            "readOnly": false,
            "title": "Date",
            "type": "Date",
          },
          "description": "",
          "hasValidation": false,
          "hidden": false,
          "name": "date",
          "readOnly": false,
          "title": "Date",
        },
        Object {
          "codegen": Object {
            "required": false,
          },
          "definition": Object {
            "codegen": Object {
              "required": false,
            },
            "description": null,
            "hasValidation": false,
            "hidden": false,
            "name": "datetime",
            "readOnly": false,
            "title": "Datetime",
            "type": "Datetime",
          },
          "description": "",
          "hasValidation": false,
          "hidden": false,
          "name": "datetime",
          "readOnly": false,
          "title": "Datetime",
        },
        Object {
          "codegen": Object {
            "required": false,
          },
          "definition": Object {
            "codegen": Object {
              "required": false,
            },
            "description": null,
            "hasValidation": false,
            "hidden": false,
            "name": "geopoint",
            "readOnly": false,
            "title": "Geopoint",
            "type": "Geopoint",
          },
          "description": "",
          "hasValidation": false,
          "hidden": false,
          "name": "geopoint",
          "readOnly": false,
          "title": "Geopoint",
        },
        Object {
          "codegen": Object {
            "required": false,
          },
          "definition": Object {
            "codegen": Object {
              "required": false,
            },
            "description": null,
            "hasValidation": false,
            "hidden": false,
            "name": "slug",
            "readOnly": false,
            "title": "Slug",
            "type": "Slug",
          },
          "description": "",
          "hasValidation": false,
          "hidden": false,
          "name": "slug",
          "readOnly": false,
          "title": "Slug",
        },
        Object {
          "codegen": Object {
            "required": false,
          },
          "definition": Object {
            "codegen": Object {
              "required": false,
            },
            "description": null,
            "hasValidation": false,
            "hidden": false,
            "name": "text",
            "readOnly": false,
            "title": "Text",
            "type": "Text",
          },
          "description": "",
          "hasValidation": false,
          "hidden": false,
          "name": "text",
          "readOnly": false,
          "title": "Text",
        },
        Object {
          "codegen": Object {
            "required": false,
          },
          "definition": Object {
            "codegen": Object {
              "required": false,
            },
            "description": null,
            "hasValidation": false,
            "hidden": false,
            "name": "url",
            "readOnly": false,
            "title": "Url",
            "type": "Url",
          },
          "description": "",
          "hasValidation": false,
          "hidden": false,
          "name": "url",
          "readOnly": false,
          "title": "Url",
        },
      ],
      "hasValidation": false,
      "hidden": false,
      "name": "myObject",
      "readOnly": false,
      "title": "My Object",
      "type": "Object",
    },
  ],
  "type": "SchemaRoot",
}
`;

exports[`normalizer takes in a sanity schema and returns a normalized, json-serializable representation 1`] = `
Object {
  "documents": Array [
    Object {
      "codegen": Object {
        "required": false,
      },
      "description": null,
      "fields": Array [
        Object {
          "codegen": Object {
            "required": false,
          },
          "definition": Object {
            "codegen": Object {
              "required": false,
            },
            "description": null,
            "hasValidation": false,
            "hidden": false,
            "list": null,
            "name": "title",
            "readOnly": false,
            "title": "Title",
            "type": "String",
          },
          "description": "",
          "hasValidation": false,
          "hidden": false,
          "name": "title",
          "readOnly": false,
          "title": "Title",
        },
        Object {
          "codegen": Object {
            "required": false,
          },
          "definition": Object {
            "codegen": Object {
              "required": false,
            },
            "description": null,
            "hasValidation": false,
            "hidden": false,
            "list": null,
            "name": "yearReleased",
            "readOnly": false,
            "title": "Year Released",
            "type": "Number",
          },
          "description": "",
          "hasValidation": false,
          "hidden": false,
          "name": "yearReleased",
          "readOnly": false,
          "title": "Year Released",
        },
        Object {
          "codegen": Object {
            "required": false,
          },
          "definition": Object {
            "codegen": Object {
              "required": false,
            },
            "description": null,
            "hasValidation": false,
            "hidden": false,
            "list": null,
            "name": "actors",
            "of": Array [
              Object {
                "codegen": Object {
                  "required": false,
                },
                "description": null,
                "hasValidation": false,
                "hidden": false,
                "name": null,
                "readOnly": false,
                "title": null,
                "to": "actor",
                "type": "RegistryReference",
              },
            ],
            "readOnly": false,
            "title": "Actors",
            "type": "Array",
          },
          "description": "",
          "hasValidation": false,
          "hidden": false,
          "name": "actors",
          "readOnly": false,
          "title": "Actors",
        },
      ],
      "hasValidation": false,
      "hidden": false,
      "name": "movie",
      "readOnly": false,
      "title": "Movie",
      "type": "Document",
    },
  ],
  "registeredTypes": Array [
    Object {
      "codegen": Object {
        "required": false,
      },
      "description": null,
      "fields": Array [
        Object {
          "codegen": Object {
            "required": false,
          },
          "definition": Object {
            "codegen": Object {
              "required": false,
            },
            "description": null,
            "hasValidation": false,
            "hidden": false,
            "list": null,
            "name": "name",
            "readOnly": false,
            "title": "Name",
            "type": "String",
          },
          "description": "",
          "hasValidation": false,
          "hidden": false,
          "name": "name",
          "readOnly": false,
          "title": "Name",
        },
      ],
      "hasValidation": false,
      "hidden": false,
      "name": "actor",
      "readOnly": false,
      "title": "Actor",
      "type": "Object",
    },
  ],
  "type": "SchemaRoot",
}
`;
